--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,7 @@ button {
   grid-row-start: 4;
   grid-row-end: 5;
   border-top: 1px solid #e5e5e5;
+  width: auto;
 }
 .footer__container {
   display: grid;
@@ -246,21 +247,33 @@ button {
   .footer__container {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
-    justify-content: space-between;
   }
   .footer__rights {
     grid-column: 1/2;
     grid-row: 1/2;
-    justify-self: start;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    justify-content: first baseline;
   }
   .footer__form {
     grid-column: -2/-1;
     grid-row: 1/2;
     grid-template-columns: repeat(2, 1fr);
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 2fr 150px;
     justify-self: end;
+  }
+  .footer__input {
+    grid-row: 1/2;
+    grid-column: -3/-2;
   }
   .footer__button {
     max-width: 150px;
+    grid-row: 1/2;
+    grid-column: -2/-1;
   }
 }
 .slider {
@@ -320,6 +333,7 @@ button {
   padding: 0;
   padding-top: 60px;
   gap: 50px 80px;
+  padding-left: 10px;
 }
 .services__item {
   display: grid;
@@ -354,6 +368,7 @@ button {
 @media screen and (min-width: 768px) {
   .services__items {
     grid-template-columns: repeat(2, 1fr);
+    padding-left: 0;
   }
 }
 @media screen and (min-width: 1200px) {
