--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,6 +4,7 @@
   grid-row-start: 4;
   grid-row-end: 5;
   border-top: 1px solid getColor("LineColor");
+  width: auto;
   &__container {
     display: grid;
     grid-template-columns: 1fr;
@@ -65,21 +66,34 @@
     &__container {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr;
-      justify-content: space-between;
     }
     &__rights {
       grid-column: 1/ 2;
       grid-row: 1 / 2;
-      justify-self: start;
+      display: grid;
+      grid-template-rows: 1fr;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 5px;
+      justify-content: first baseline;
     }
     &__form {
       grid-column: -2/ -1;
       grid-row: 1 / 2;
       grid-template-columns: repeat(2, 1fr);
+
+      display: grid;
+      grid-template-rows: 1fr;
+      grid-template-columns: 2fr 150px;
       justify-self: end;
+    }
+    &__input {
+      grid-row: 1/2;
+      grid-column: -3/-2;
     }
     &__button {
       max-width: 150px;
+      grid-row: 1/2;
+      grid-column: -2/-1;
     }
   }
 }
