--- a/sass/utils/_colors.scss
+++ b/sass/utils/_colors.scss
@@ -14,13 +14,11 @@ $colors: (
   "MidColor": #c6c6c6,
   "Transparent": #ffffff00,
   "LineColor": #e5e5e5,
+  "SocialFirst": #f38181,
+
+  "SocialSecond": #fce38a,
 
 
-
-  
-  "ColorLightGray": #f5a1a1,
-  
-  "PfolioItemBorder": #eeeeee,
   "WeDoBoxTranspColor": #2f303acc,
   "ModalBGColor": #00000033,
   "ColorFormCommBorder": #21212133,
