--- a/css/main.css
+++ b/css/main.css
@@ -417,10 +417,105 @@ button {
   height: auto;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.team__photo {
+  position: relative;
+  display: inline-block;
+}
+
+.team__img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.team__img:hover::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.team__caption {
+  position: relative;
+  z-index: 2;
+}
+
+.team__social {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  gap: 0;
+  transition: opacity 0.3s ease;
+}
+
+.team__photo:hover .team__social {
+  opacity: 1;
+}
+
+.team__social li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.team__icon {
+  color: white;
+  font-size: 20px;
+}
+
 .team__img:hover,
-.team__img :active {
+:active {
   box-shadow: 7px 7px 0px 4px #95e1d3;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team__icon {
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  background-color: #fce38a;
+  color: #f38181;
+  margin: 0;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  row-gap: 0;
+}
+.team__icon:hover,
+.team__icon :active {
+  background-color: #f38181;
+  color: #fce38a;
+}
+
+.fa-facebook {
+  background-color: #f38181;
+  color: #fce38a;
+}
+.fa-facebook:hover,
+.fa-facebook :active {
+  background-color: #fce38a;
+  color: #f38181;
+}
+
+.team__social {
+  display: grid;
+  grid-template-columns: repeat(4, 40px);
+  grid-row: 1fr;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 
 @media screen and (min-width: 768px) {
