--- a/sass/components/_section-services.scss
+++ b/sass/components/_section-services.scss
@@ -27,6 +27,7 @@
   &__icon {
     height: auto;
     width: 40px;
+    font-size: 30px;
     color: getColor("AccentColor");
     grid-column: 1/ 2;
     grid-row: 1 / 2;
