--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -21,7 +21,6 @@
     width: 100px;
   }
   &__icon {
-    height: 20px;
     transition: $transition;
   }
   &__button {
@@ -45,6 +44,7 @@
     i {
       height: 60px;
       width: 60px;
+      font-size: 30px;
     }
   }
 }
