--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,10 @@ button {
   grid-column-end: 3;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.navigation__icon {
+  width: 10px;
+  font-size: 10px;
+}
 
 @media screen and (min-width: 768px) {
   .navigation {
