--- a/sass/components/_section-slider.scss
+++ b/sass/components/_section-slider.scss
@@ -41,18 +41,24 @@
   }
 }
 
-
 // // TABLET
 
-// @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
+  .slider {
+    &__title {
+      font-size: 80px;
+      width: 500px;
+    }
+  }
+}
 
 // DESCTOP
 
 @media screen and (min-width: 1200px) {
   .slider {
     &__title {
-      font-size: 80px;
-      width: 500px;
+      font-size: 100px;
+      width: 550px;
     }
   }
 }
