--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -103,11 +103,6 @@
   opacity: 1;
 }
 
-// .team__social li {
-//   display: inline-block;
-//   margin-right: 10px;
-// }
-
 .team__social {
   display: grid;
   grid-template-columns: repeat(4, 40px);
@@ -117,18 +112,17 @@
   padding: 0;
 }
 
-.team__overlay:hover {
-  width: 100%;
-  height: 100%;
-  background-color: linear-gradient(
-    to top,
-    getColor("gradientColFirst"),
-    getColor("gradientColSecond")
-  );
-}
+// .team__overlay:hover {
+//   width: 100%;
+//   height: 100%;
+//   background-color: linear-gradient(
+//     to top,
+//     getColor("gradientColFirst"),
+//     getColor("gradientColSecond")
+//   );
+// }
 
-.team__photo:hover,
-:active {
+.team__photo:hover {
   box-shadow: 7px 7px 0px 4px getColor("AccentColor");
   transition: $transition;
 }
@@ -141,6 +135,7 @@
   height: 40px;
   width: 40px;
   font-size: 20px;
+  border: 1px solid getColor("SocialFirst");
   background-color: getColor("SocialSecond");
   color: getColor("SocialFirst");
   margin: 0;
